# proyectoaulaNE

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  ETLN.ipynb  MODELS.ipynb  README.md  pyproject.toml  sui_factura_promedio_consolidado.csv
Dataset_proyecto_aula/: 2025_01.csv  2025_02.csv  2025_03.csv  2025_04.csv  2025_05.csv  2025_06.csv  2025_07.csv  2025_08.csv  2025_09.csv  2025_10.csv  2025_11.csv  2025_12.csv  2026_01.csv  2026_02.csv  2026_03.csv
serving/: DEPLOY_API.md  train_linear_model.py
serving/app/: main.py  model_service.py  schemas.py
