[project]
name = "proyectoaulane"
version = "0.1.0"
description = "Entorno de analisis y transformacion de datos para el proyecto de aula"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
]

[tool.uv]
package = false